stats fix