@@ -1,4 +1,3 @@
-// backend/config/SecurityConfig.java
 package com.homeride.backend.config;
 
 import com.homeride.backend.filter.JwtAuthenticationFilter;
@@ -11,6 +10,7 @@ import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.AuthenticationProvider;
 import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
+import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
@@ -21,12 +21,14 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
 
 import static org.springframework.security.config.Customizer.withDefaults;
 
 @Configuration
 @EnableWebSecurity
+@EnableMethodSecurity
 public class SecurityConfig {
 
     private final JwtAuthenticationFilter jwtAuthFilter;
@@ -48,38 +50,49 @@ public class SecurityConfig {
                 .authorizeHttpRequests(auth -> auth
                         // Public endpoints
                         .requestMatchers("/api/auth/**").permitAll()
-                        .requestMatchers("/api/contact/**").permitAll()   // 👈 add this line
-
-                        .requestMatchers("/uploads/**").permitAll()
-                        .requestMatchers("/api/places/**").permitAll()
-                        .requestMatchers("/api/maps/**").permitAll()
-                        .requestMatchers("/ws/**").permitAll()
-                        .requestMatchers("/api/rides/travel-info").permitAll()
-                        .requestMatchers("/api/rides/calculate-price").permitAll()
-                        .requestMatchers(HttpMethod.GET, "/api/employees/{id}").permitAll()
+                        .requestMatchers("/api/auth/public/stats").permitAll() // <-- ADDED THIS LINE
+                        .requestMatchers("/api/contact/**").permitAll()
+                        .requestMatchers("/api/locations/cities").permitAll()
+                        .requestMatchers("/api/places/autocomplete").permitAll()
+                        .requestMatchers("/api/places/details").permitAll()
+                        .requestMatchers("/api/proxy/directions").permitAll()
+                        .requestMatchers("/uploads/**").permitAll() // Allow access to uploaded files
+                        .requestMatchers("/api/test/public").permitAll()
 
                         // Authenticated endpoints
                         .requestMatchers(HttpMethod.GET, "/api/rides").authenticated()
+                        .requestMatchers(HttpMethod.POST, "/api/rides").authenticated()
                         .requestMatchers(HttpMethod.GET, "/api/rides/my-rides").authenticated()
-
-                        // FIX: Explicitly allow authenticated users to offer a ride
-                        .requestMatchers(HttpMethod.POST, "/api/rides/offer").authenticated()
-
-                        .requestMatchers(HttpMethod.DELETE, "/api/rides/{rideId}").authenticated()
-                        .requestMatchers("/api/rides/**").authenticated()
-                        .requestMatchers("/api/ratings/**").authenticated()
-                        //.requestMatchers("/api/admin/**").hasRole("ADMIN")
+                        .requestMatchers(HttpMethod.GET, "/api/rides/{id}").authenticated()
+                        .requestMatchers(HttpMethod.POST, "/api/rides/{id}/book").authenticated()
+                        .requestMatchers(HttpMethod.PUT, "/api/rides/{rideId}/status").authenticated()
+                        .requestMatchers(HttpMethod.GET, "/api/employees/me").authenticated()
+                        .requestMatchers(HttpMethod.PUT, "/api/employees/me").authenticated()
                         .requestMatchers(HttpMethod.POST, "/api/employees/me/profile-picture").authenticated()
                         .requestMatchers(HttpMethod.DELETE, "/api/employees/me/profile-picture").authenticated()
-                        .requestMatchers(HttpMethod.PUT, "/api/employees/me").authenticated()
-                        .requestMatchers(HttpMethod.GET, "/api/chat/history/**").authenticated()
-                        .requestMatchers("/api/chatbot/**").authenticated()
+                        .requestMatchers(HttpMethod.GET, "/api/employees/profile/{userId}").authenticated()
+                        .requestMatchers(HttpMethod.POST, "/api/ratings").authenticated()
+                        .requestMatchers(HttpMethod.GET, "/api/ratings/my-ratings").authenticated()
+                        .requestMatchers(HttpMethod.GET, "/api/ratings/given").authenticated()
+                        .requestMatchers(HttpMethod.GET, "/api/notifications").authenticated()
+                        .requestMatchers(HttpMethod.POST, "/api/notifications/mark-read").authenticated()
+                        .requestMatchers(HttpMethod.POST, "/api/chatbot").authenticated()
+                        .requestMatchers(HttpMethod.POST, "/api/rides/cancel").authenticated()
+                        .requestMatchers("/api/chat/**").authenticated()
+                        .requestMatchers("/app/**").authenticated() // WebSocket endpoints
+                        .requestMatchers("/topic/**").authenticated() // WebSocket endpoints
+                        .requestMatchers("/user/**").authenticated() // WebSocket endpoints
+
+                        // Admin endpoints
+                        .requestMatchers("/api/admin/**").hasRole("ADMIN")
+                        .requestMatchers("/api/test/admin").hasRole("ADMIN")
 
                         .anyRequest().authenticated()
                 )
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authenticationProvider(authenticationProvider())
                 .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
+
         return http.build();
     }
 
@@ -97,13 +110,12 @@ public class SecurityConfig {
     }
 
     @Bean
-    public CorsConfigurationSource corsConfigurationSource() {
+    CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOriginPatterns(List.of("*"));
-        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("*"));
+        configuration.setAllowedOrigins(List.of("http://localhost:5173", "http://localhost:3000", "https_domain_placeholder", "https_domain_placeholder"));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Cache-Control", "Content-Type"));
         configuration.setAllowCredentials(true);
-
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
